--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="hero-section">
             <img class="game-logo" src="/assets/bluff-momo-logo.png">
-            <img class="cards-images" src="/assets/char- combined.png">
+            <img class="cards-images" src="/assets/char-combined.webp">
             
             <div class="meta-game-items">
                 <div class="game-item">
