adding a new page bluff-momo

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <nav class="navbar">
-        <img class="logo" src="/assets/tumlet-logo.png">
-        <button class="nav-button">get in touch</button>
-    </nav>
+    
+        <nav class="navbar">
+            <a href="/"><img class="logo" src="/assets/tumlet-logo.png"> </a>
+            <a href="mailto:yashantgyawali@gmail.com" target="_blank"><button class="nav-button">get in touch</button></a>
+
+        </nav>
+   
     <div class="container">
         <div class="hero-section">
             <img class="game-logo" src="/assets/bluff-momo-logo.png">
@@ -35,11 +38,12 @@
             <div class="hero-text">
                 bluff momo is a card game based in the street of kathmandu, where players bluff, deceive, and outsmart their friends to steal the most momo and poison their way to victory!
             </div>
-
+            <a href="/bluff-momo.html">
             <button class="cta-button">
-                <img class="icon" src="/assets/insta-draw.svg">
-                <span>dm us to order</span>
+                <img class="icon" src="/assets/bulb.svg"> 
+               learn how to play</button>
             </button>
+        </a>
             
         </div>
     </div>
@@ -49,9 +53,12 @@
             <span class="footer-text">on a mission to spread playfulness across nepal</span>
         </div>
         <div class="footer-right">
-            <img class="footer-svg" src="assets/insta.svg" alt="tumlet-logo">
-            <img class="footer-svg" src="assets/email.svg" alt="tumlet-logo">
-
+            <a href="https://www.instagram.com/tumlet.np/" target="_blank">
+                <img class="footer-svg" src="assets/insta.svg" alt="tumlet-logo">
+            </a>
+            <a href="mailto:yashantgyawali@gmail.com" target="_blank">
+                <img class="footer-svg" src="assets/email.svg" alt="tumlet-logo">
+            </a>
         </div>
     </footer>
 </body>
