--- a/bluff-momo.html
+++ b/bluff-momo.html
@@ -26,7 +26,7 @@
         <h2 class="header2">Gameplay:</h2>
         <span>Starting with a player to the right of the dealer, players take turns performing one of the following actions:</span>
         <ol>
-            <li class="font-inter">Claim to be one of the 5 characters and use its power (<a href="#rules-table"> refer to the table</a>). You can bluff, but be careful—anyone can challenge you.</li>
+            <li class="font-inter">Claim to be one of the 5 characters and use its power (<a class="link-underline" href="#rules-table">refer to the table</a>). You can bluff, but be careful—anyone can challenge you.</li>
             <li class="font-inter">Take 1 momo without claiming any character. Cannot be blocked or challenged.</li>
             <li class="font-inter">Collect as many momo as you can, and when you have 7, you can food-poison any player. The poisoned player loses 1 card of their choice. Cannot be blocked or challenged.</li>
             <li class="font-inter">If you run out of both your cards, you're eliminated from the game.</li>
@@ -39,7 +39,7 @@
             <li class="font-inter">If you’re truthful: The challenger loses 1 card of their choice (return it to the deck), and you exchange the revealed card for a random card from the deck.</li>
             <li class="font-inter">If you’re bluffing: You lose 1 card of your choice (return it to the deck), and the challenger wins 1 momo.</li>
         </ol>   
-        Blocking rule: The powers of चोर, मन्त्री, and भट्टीको दाई used against you can be blocked by claiming to have certain characters (<a href="#rules-table">>refer to the table</a>). However, this claim can also be challenged by any player, and the same challenge rule applies.<br>
+        Blocking rule: The powers of चोर, मन्त्री, and भट्टीको दाई used against you can be blocked by claiming to have certain characters (<a href="#rules-table" class="link-underline">refer to the table</a>). However, this claim can also be challenged by any player, and the same challenge rule applies.<br>
         Double trouble rule: If you're poisoned by a player with भट्टीको दाई and you either: 1) challenge their claim and lose, or 2) bluff by claiming to have आमा to block the poison, but get challenged and lose, you lose both cards—one for the poison and one for the failed challenge.
         
         <br>
