optimization for phone

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         </nav>
    
-    <div class="container">
+    <div class="container hero-container">
         <div class="hero-section">
             <img class="game-logo" src="/assets/bluff-momo-logo.png">
             <img class="cards-images" src="/assets/char-combined.webp">
