fixing insta link

--- a/bluff-momo-rules.html
+++ b/bluff-momo-rules.html
@@ -59,7 +59,7 @@
             <span class="footer-text">on a mission to spread playfulness across nepal</span>
         </div>
         <div class="footer-right">
-            <a href="https://www.instagram.com/tumlet.np/" target="_blank">
+            <a href="https://www.instagram.com/tumlet.boardgames/" target="_blank">
                 <img class="footer-svg" src="assets/insta.svg" alt="tumlet-logo">
             </a>
             <a href="mailto:yashantgyawali@gmail.com" target="_blank">
