--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
         <nav class="navbar">
             <a href="/"><img class="logo" src="/assets/tumlet-logo.png"> </a>
-            <a href="mailto:yashantgyawali@gmail.com" target="_blank"><button class="nav-button">get in touch</button></a>
+            <a href="https://bichitra.tumlet.com/" target="_blank"><button class="nav-button">play bichitra</button></a>
 
         </nav>
    
@@ -53,7 +53,7 @@
             <span class="footer-text">on a mission to spread playfulness across nepal</span>
         </div>
         <div class="footer-right">
-            <a href="https://www.instagram.com/tumlet.np/" target="_blank">
+            <a href="https://www.instagram.com/tumlet.boardgames/ " target="_blank">
                 <img class="footer-svg" src="assets/insta.svg" alt="tumlet-logo">
             </a>
             <a href="mailto:yashantgyawali@gmail.com" target="_blank">
