--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <img class="cards-images-low" src="/assets/questions.png">
 
             <div class="hero-text white-text">
-                Ganthan is a nudge for you and your friends to dive into conversations that truly connect. We are talking about the chats that spark unexpected laughter, and bring out thoughts you didn't even know you had.
+                ganthan is a nudge for you and your friends to dive into conversations that truly connect. we are talking about the chats that spark unexpected laughter, and bring out thoughts you didn't even know you had.
             </div>
             <a href="http://ganthan.tumlet.com/">
             <button class="cta-button color-black">
