setting meta description and favicon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+<!-- Primary Meta Tags --> 
+<meta name="title" content="Tumlet | Spreading Playfulness Across Nepal"/> 
+<meta name="description" content="Play, laugh, repeat! Tumlet crafts games that spark connection, nostalgia, and pure fun across Nepal."/> 
+
+<!-- Open Graph / Facebook --> 
+<meta property="og:title" content="Tumlet | Spreading Playfulness Across Nepal"/> 
+<meta property="og:description" content="Play, laugh, repeat! Tumlet crafts games that spark connection, nostalgia, and pure fun across Nepal."/> 
+<meta property="og:image" content="/assets/unfurl.png"/> 
+<meta property="og:url" content="https://tumlet.com"/> 
+
+<!-- Twitter --> 
+<meta property="twitter:card" content="summary_large_image"/> 
+<meta property="twitter:url" content="https://tumlet.com"/> 
+<meta property="twitter:title" content="Tumlet | Spreading Playfulness Across Nepal"/> 
+<meta property="twitter:description" content="Play, laugh, repeat! Tumlet crafts games that spark connection, nostalgia, and pure fun across Nepal."/> 
+<meta property="twitter:image" content="/assets/unfurl.png"/> 
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tumlet | Spreading Playfulness Across Nepal</title>
