updating the title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 <!-- Primary Meta Tags --> 
-<meta name="title" content="Tumlet | Spreading Playfulness Across Nepal"/> 
+<meta name="title" content="Tumlet | Spreading Playfulness Amongts Nepalese"/> 
 <meta name="description" content="Play, laugh, repeat! Tumlet crafts games that spark connection, nostalgia, and pure fun for young Nepali adults."/> 
 
 <!-- Open Graph / Facebook --> 
